# drop-mod

./: .gitignore  README.md  build.sh  install.bat  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
drop/: __init__.py  __main__.py  basic.py  do_not_port.txt  ext.py  finder.py  gui.py  moderation.py  mute.py  steam.py  tempban.py  types.py
