[metadata]
name = drop-mod-atlas_core
version = 1.0
author = atlas_core
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
[options]
python_requires = >=3.6